crates/ui/src/snapshots/cctop_ui__snapshot__launch_cwd_hosts_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲╭ New tab ───────────────────────────────────────────────────╮JECT    │
│●    now│   sh                                                       │ the ch…┃
│●     7m│ in ▏                                                       │        │
╰────────│   /home/me/src/web                                         │────────╯
╭ Info  P│   /home/me/src/api                                         │ Context╮
│Root /us│ › nz-b-procurementdb1:  ssh host · procdb                  │        │
│    PID │   devbox:  ssh host                                        │        │
│   4101 │ Enter accept  Tab fill in  ↑/↓ pick  Esc cancel            │        │
│   4188 ╰────────────────────────────────────────────────────────────╯        │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
