crates/ui/src/snapshots/cctop_ui__snapshot__launch_cwd_offline_80x24.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models               │
│Today             $8.97                               ⡀  Sessions  4 · 2 live │
│This month        $0.00                               ⡀  Agent CPU   3.2%     │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB     │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────╮
│   LAST▲         $ MODEL          PERM   ! HOST       BRANCH       PROJECT    │
│●    now╭ New tab ───────────────────────────────────────────────────╮ the ch…┃
│●     7m│   sh                                                       │        │
╰────────│ in devbox:~/src▏                                           │────────╯
╭ Info  P│ devbox: needs a password or key prompt — the tab will ask  │ Context╮
│Root /us│ Enter accept  Esc keep the old one                         │        │
│    PID ╰────────────────────────────────────────────────────────────╯        │
│   4101    9.8%    360.0M  claude --model opus                                │
│   4188    2.4%     44.0M  node mcp-server.js                                 │
│   4290    0.3%      8.0M  bash -c npm test                                   │
│                                                                              │
╰──────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────── + account ╮
│Claude checking…                        Codex checking…                       │
╰──────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help          ⧉ share
