crates/ui/src/snapshots/cctop_ui__snapshot__launch_cwd_remote_120x40.snap
---
source: src/ui/snapshot.rs
expression: screen
---
 1:Dashboard │ + Tab (t) ───────────────────────────────────────────────────────────────────────────────────── Settings
╭ Overview ────────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│Live rate         $0.04                               ⡀  Models    █████████ claude-opus-4-1 68% claude-sonnet-4-5 32%│
│Today             $8.97                               ⡀  Sessions  4 · 2 live · 3 in 24h                              │
│This month        $0.00                               ⡀  Agent CPU   3.2%                    ⡀                        │
│All time         $28.51 $0.00/day this month             Agent mem 592 MB · 2.5M in / 72.3K out                       │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Sessions (4) ────────────────────────────────────────────────────────────────────────────────────────────────────────╮
│   LAST▲    DUR         $   CTX%  CPU% MODEL          HARNESS    PERM   ! HOST       PROFILE   BRANCH       PROJECT   │
│●    now     1h    $18.42    90%  12.5 opus-4-1       ─          ─        local                ─            Fix the c…│
│●     7m     2h     $2.87    29%   0.4 sonnet-4-5     ─          ─        local                ─            api       │
│○     3h     1h     $0.19      ─     ─ haiku-4-5      ─          ─        local                ─            docs      │
│○     2d    12h     $7.03      ─     ─ gpt-5-codex    ─          ─        local                ─            infra     │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                            ╭ New tab ───────────────────────────────────────────────────╮                            │
│                            │   sh                                                       │                            │
│                            │ in procdb:~/src/▏                                          │                            │
│                            │   ~/src/api                                                │                            │
│                            │   ~/src/cctop  read-only on the host                       │                            │
│                            │   ~/src/web                                                │                            │
╰────────────────────────────│ Enter accept  Tab fill in  ↑/↓ pick  Esc cancel            │────────────────────────────╯
╭ Info  Performance  Processe╰────────────────────────────────────────────────────────────╯────────────────────────────╮
│Root /usr/bin/claude --model opus                                                                                     │
│    PID    CPU%       MEM  COMMAND                                                                                    │
│   4101    9.8%    360.0M  claude --model opus                                                                        │
│   4188    2.4%     44.0M  node mcp-server.js                                                                         │
│   4290    0.3%      8.0M  bash -c npm test                                                                           │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
╭ Limits ─────────────────────────────────────────────────────────────────────────────────────────────────── + account ╮
│Claude checking…                                            Codex checking…                                           │
╰──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────╯
↑↓ Move ↵ Actions / Filter Space Mark a Attach R Resume ? Help t New tab Tab Panel S Sort q Quit                ⧉ share
